--- a/newapproach/Dockerfile
+++ b/newapproach/Dockerfile
@@ -17,9 +17,10 @@ ENV ENV_CONTROLLER_URL=$CONTROLLER_URL
 # Install everything we will need to install the Controller Agent so that the container can start quickly
 RUN apt-get update && apt install -y curl python gnupg2 procps dh-python distro-info-data libmpdec2 libpython3-stdlib libpython3.5-minimal libpython3.5-stdlib lsb-release python3 python3-minimal python3.5 python3.5-minimal
  
-EXPOSE 80 443 8080 8090
+EXPOSE 80 443 8080 8090 49151
 STOPSIGNAL SIGTERM
  
+RUN cp -r /usr/share/nginx/html/ /etc/nginx
 WORKDIR /controller
 RUN printf "curl -skSL ${CONTROLLER_URL} | bash -s - -y\nnginx -g 'daemon off;'" > start
 CMD ["sh", "/controller/start"]
